[gd_scene load_steps=2 format=3 uid="uid://dppgboe0v1i4n"]

[ext_resource type="Script" path="res://Two_of_Hearts/Scenes/title_screen.gd" id="1_pp731"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pp731")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.994274, 1.00888)
color = Color(0.467784, 0.430881, 1, 1)

[node name="TitleContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2

[node name="TitleText" type="Label" parent="TitleContainer"]
layout_mode = 2
text = "Title"

[node name="MenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.98396)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionButton" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MenuContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
